comments + read.me added

--- a/VeganEats/src/app/header/header.component.html
+++ b/VeganEats/src/app/header/header.component.html
@@ -1,13 +1,17 @@
 <!-- header -->
 <header>
     <div class="header-container">
+
         <div class="logo-container">
+
+            <!-- logo -->
             <div class="logo-image">
                 <embed src="../../assets/img/shallow-pan-of-food.svg">
                 <h1> <span class="veg">Vegan</span> <span class="eats">Eats</span> </h1>
             </div>
+            <!-- logo -->
             
-    
+            <!-- links -->
             <div class="links-container">
     
                 <ul>
@@ -29,10 +33,14 @@
                 </ul>
         
             </div>
-    
+            <!-- links -->
+
+            <!-- burger menu -->
             <div class="burger-menu-container">
                 <i class="fa-solid fa-bars"></i>
             </div>
+            <!-- burger menu -->
+
         </div>
     </div>
 </header>
