--- a/VeganEats/src/app/recipes/recipes.component.scss
+++ b/VeganEats/src/app/recipes/recipes.component.scss
@@ -97,6 +97,7 @@ h2 {
             margin: 0 20px;
             margin-bottom: 20px;
             cursor: pointer;
+            box-shadow: 18px 26px 17px -4px rgba(0,0,0,0.1);
             
 
             .title {
